--- a/My Application/app/src/main/res/values/strings.xml
+++ b/My Application/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">My Application</string>
+
+        <string name="app_logo">App Logo</string>
+        <string name="welcome_back">Welcome Back</string>
+        <string name="email_hint">Email</string>
+        <string name="password_hint">Password</string>
+        <string name="login">Log In</string>
+        <string name="forgot_password">Forgot Password?</string>
+        <string name="no_account_sign_up">You Don\'t have an account? Sign up</string>
+
+
 </resources>
